deleted class for paragraph

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <main>
-      <p>The count is: <span class="js-current-count"></span></p>
+      <p>The count is: <span></span></p>
       <form>
         <button type="submit">Increment server-side count</button>
       </form>
